Updated stylesheet to prevent quote overlap

--- a/css/style.css
+++ b/css/style.css
@@ -1827,7 +1827,18 @@ html[xmlns] .slides {
       #hero-slider .flexslider .flex-direction-nav a.flex-prev {
         left: 10px; }
     #hero-slider .flexslider .slides {
-      height: 100%; }
+      height: 100%;
+      /*@media all and (max-height: 599px) {
+      	.slide {
+      		.gradient {
+      			.container {
+      				.content {
+      					display: none !important;
+      				}
+      			}
+      		}
+      	}
+      }*/ }
       #hero-slider .flexslider .slides .slide {
         height: 40vh;
         width: 10%;
@@ -1877,7 +1888,8 @@ html[xmlns] .slides {
                 margin-top: .5em; }
       @media all and (min-height: 600px) {
         #hero-slider .flexslider .slides .slide .gradient .container .content {
-          margin-top: 30vh; }
+          display: block;
+          margin-top: 20vh; }
           #hero-slider .flexslider .slides .slide .gradient .container .content h4 {
             margin-bottom: 2em;
             margin-top: .5em; } }
@@ -1885,6 +1897,7 @@ html[xmlns] .slides {
         #hero-slider .flexslider .slides .slide {
           height: 60vh; }
           #hero-slider .flexslider .slides .slide .gradient .container .content {
+            display: block;
             margin-top: 30vh; }
             #hero-slider .flexslider .slides .slide .gradient .container .content h4 {
               margin-bottom: 2em;
@@ -1898,16 +1911,17 @@ html[xmlns] .slides {
       @media all and (min-width: 769px) {
         #hero-slider .flexslider .slides .slide {
           height: 60vh; }
-          #hero-slider .flexslider .slides .slide .gradient .container .content {
-            display: block; }
-            #hero-slider .flexslider .slides .slide .gradient .container .content h3 {
-              font-size: 24px;
-              font-size: 2.4rem;
-              font-style: italic; }
-            #hero-slider .flexslider .slides .slide .gradient .container .content h4 {
-              font-size: 16px;
-              font-size: 1.6rem;
-              font-weight: 100; } }
+          #hero-slider .flexslider .slides .slide .gradient .container .content h3 {
+            font-size: 24px;
+            font-size: 2.4rem;
+            font-style: italic; }
+          #hero-slider .flexslider .slides .slide .gradient .container .content h4 {
+            font-size: 16px;
+            font-size: 1.6rem;
+            font-weight: 100; } }
+      @media all and (max-width: 769px) {
+        #hero-slider .flexslider .slides .slide .gradient .container .content {
+          display: none; } }
       @media all and (min-width: 1024px) {
         #hero-slider .flexslider .slides .slide {
           height: 70vh; }
